# trade-collection-server

./: CMakeLists.txt  README.md
src/: aggregator.cpp  aggregator.hpp  data.cpp  data.hpp  ninja-api.hpp  ninja-client.hpp  poe-api.hpp  poe-client.hpp  scrapper.cpp  server.cpp
